# openclaw-launcher

./: .editorconfig  AGENTS.md  CHANGELOG.md  README.md  README_EN.md  package-lock.json  package.json
.github/workflows/: build.yml
docs/: CHANGELOG.md  TODO.md  UI_PRD_V2.md  UI_PRD_v1.md
docs/archive/: PRD_v0.1.0.md  TODO_v0.1.0.md
docs/phases/: phase10_i18n_ollama_analytics.md  phase2_experience.md  phase4.5_architecture_polish.md  phase4_architecture_refactor.md  phase5.2_log_diagnostics.md  phase5.5_dashboard_ux.md  phase5.6_custom_model.md  phase5_ui_polish.md  phase7_tray_update.md  phase8_agents.md  phase9_channels.md
docs/skills/docs-versioning/: SKILL.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  diagnostics.rs  download.rs  environment.rs  installer.rs  lib.rs  openclaw.rs  paths.rs  provider_mgr.rs  providers.rs  service.rs  setup.rs
src/components/: ApiKeyModal.tsx  ConfirmModal.tsx  DashboardTab.tsx  ModelSelectWithCustom.tsx  ModelSwitchModal.tsx  ModelsTab.tsx  RepairToast.tsx  SettingsTab.tsx  SetupWizard.tsx
src/components/ui/: Modal.tsx
src/hooks/: useConfig.ts  useLogs.ts  useService.ts  useSetup.ts
src/styles/: analytics.css  models.css
src/types/: index.ts
src/utils/: ansi-strip.ts  log-humanizer.ts
